# IAVSD_ILTIS

./: .gitignore  analyse_modale.txt  readme.md
animationR/: AntiPhaseCosine_10ms_q.anim  AntiPhaseCosine_5ms_q.anim  Belgian_road_1.5m_s_q.anim  Belgian_road_10m_s_q.anim  Belgian_road_15m_s_q.anim  Belgian_road_3m_s__q.anim  Belgian_road_3m_s_q.anim  Belgian_road_5m_s_q.anim  Belgian_road__Big_3m_s__q.anim  Bumpy_10m_s_Normal_contact_PID_q.anim  Bumpy_10m_s_Normal_contact_q.anim  Bumpy_10m_s_Simple_contact_q.anim  Bumpy_20m_s_Normal_contact_q.anim  Bumpy_20m_s_Simple_contact_q.anim  Bumpy_road_10m_s_q.anim  Failed_loop_closing_procedure_q.anim  InPhaseCosine_10ms_q.anim  InPhaseCosine_5ms_normal_contact_q.anim  InPhaseCosine_5ms_q.anim  InPhaseCosine_5ms_simple_contact_q.anim  RampToSteer_10ms_q.anim  RampToSteer_20ms_q.anim  RampToSteer_30ms_q.anim  SinusoidalSteer_1mm_q.anim  SinusoidalSteer_2mm_q.anim  SinusoidalSteer_4mm_q.anim  Test_PID_q.anim  equil_q.anim  mode_1.anim  mode_10.anim  mode_11.anim  mode_12.anim  mode_13.anim  mode_14.anim  mode_15.anim  mode_16.anim  mode_17.anim  mode_18.anim  mode_19.anim  mode_2.anim  (+8 more)
dataR/: Jeep.mbs  Jeep_Front.mbs  Jeep_Rear.mbs
resultsR/: 1_Nominal_Report.txt  2_Equilibrium_Report.txt  AntiPhaseCosine_10ms_Ground_Forces.res  AntiPhaseCosine_10ms_Lambda.res  AntiPhaseCosine_10ms_Leaf_Forces.res  AntiPhaseCosine_10ms_Qc.res  AntiPhaseCosine_10ms_Qq.res  AntiPhaseCosine_10ms_Spring_Forces.res  AntiPhaseCosine_10ms_Wheel_height.res  AntiPhaseCosine_10ms_linkF.res  AntiPhaseCosine_10ms_linkZ.res  AntiPhaseCosine_10ms_linkZD.res  AntiPhaseCosine_10ms_q.res  AntiPhaseCosine_10ms_qd.res  AntiPhaseCosine_10ms_qdd.res  AntiPhaseCosine_5ms_Ground_Forces.res  AntiPhaseCosine_5ms_Lambda.res  AntiPhaseCosine_5ms_Leaf_Forces.res  AntiPhaseCosine_5ms_Qc.res  AntiPhaseCosine_5ms_Qq.res  AntiPhaseCosine_5ms_Spring_Forces.res  AntiPhaseCosine_5ms_Wheel_height.res  AntiPhaseCosine_5ms_linkF.res  AntiPhaseCosine_5ms_linkZ.res  AntiPhaseCosine_5ms_linkZD.res  AntiPhaseCosine_5ms_q.res  AntiPhaseCosine_5ms_qd.res  AntiPhaseCosine_5ms_qdd.res  Belgian_road_1.5m_s_Ground_Forces.res  Belgian_road_1.5m_s_Horizontal_Acc.res  Belgian_road_1.5m_s_Leaf_Forces.res  Belgian_road_1.5m_s_Spring_Forces.res  Belgian_road_1.5m_s_Wheel_height.res  Belgian_road_1.5m_s_linkF.res  Belgian_road_1.5m_s_linkZ.res  Belgian_road_1.5m_s_linkZD.res  Belgian_road_10m_s_Ground_Forces.res  Belgian_road_10m_s_Horizontal_Acc.res  Belgian_road_10m_s_Lambda.res  Belgian_road_10m_s_Lateral_Acc.res  (+238 more)
symbolicR/: CMakeLists.txt  mbs_cons_hJ_Jeep.c  mbs_cons_hJ_Jeep.h  mbs_cons_jdqd_Jeep.c  mbs_cons_jdqd_Jeep.h  mbs_dirdyna_Jeep.c  mbs_dirdyna_Jeep.h  mbs_extforces_Jeep.c  mbs_extforces_Jeep.h  mbs_gensensor_Jeep.c  mbs_gensensor_Jeep.h  mbs_invdyna_Jeep.c  mbs_invdyna_Jeep.h  mbs_link_Jeep.c  mbs_link_Jeep.h  mbs_sensor_Jeep.c  mbs_sensor_Jeep.h  stderr.txt  stdout.txt
userfctR/: CMakeLists.txt  GroundContact.c  GroundContact.h  user_DrivenJoints.c  user_ExtForces.c  user_IO.c  user_IO.h  user_JointForces.c  user_Link3DForces.c  user_LinkForces.c  user_all_id.h  user_cons_hJ.c  user_cons_jdqd.c  user_dirdyn.c  user_equil.c  user_hard_param.h  user_load.c  user_model.c  user_model.h
userfctR/realtime/: user_realtime_options.c  user_realtime_visu.c
workR/: CMakeLists.txt
workR/src/: main.c
wrl/: bump.wrl  tire.wrl
